<resources>
    <string name="app_name">DrinkAndEat Test</string>
    <string name="dovn_text">© DrinkAndEat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="sorry_text">Sorry, friend, but you lost… \nTry again or exit?</string>
    <string name="text_on_settings">The origins of the word cocktail have been debated. The first written mention of cocktail as a beverage appeared in The Farmers Cabinet, 1803 in the United States. The first definition of a cocktail as an alcoholic beverage appeared three years later in The Balance and Columbian Repository (Hudson, New York) May 13, 1806.[4] Traditionally, cocktail ingredients included spirits, sugar, water and bitters,[5] however, this definition evolved throughout the 1800s, to include the addition of a liqueur.\nThe Oxford Dictionaries define cocktail as An alcoholic drink consisting of a spirit or spirits mixed with other ingredients, such as fruit juice or cream.[11] A cocktail can contain alcohol, a sugar, and a bitter/citrus. When a mixed drink contains only a distilled spirit and a mixer, such as soda or fruit juice, it is a highball. Many of the International Bartenders Association Official Cocktails are highballs. When a mixed drink contains only a distilled spirit and a liqueur, it is a duo, and when it adds a mixer, it is a trio. Additional ingredients may be sugar, honey, milk, cream, and various herbs.\nDale DeGroff hypothesizes that the word evolved from the French coquetier, for an eggcup in which Antoine A. Peychaud, creator of Peychauds Bitters, allegedly used to serve his guests a mix of cognac with a dash of his bitters.\nThere is a lack of clarity on the origins of cocktails.\nDuring Prohibition in the United States (1920–1933), when alcoholic beverages were illegal, cocktails were still consumed illegally in establishments known as speakeasies. The quality of the liquor available during Prohibition was much worse than previously.[29] There was a shift from whiskey to gin, which does not require aging and is therefore easier to produce illicitly.[30] Honey, fruit juices, and other flavorings served to mask the foul taste of the inferior liquors. Sweet cocktails were easier to drink quickly, an important consideration when the establishment might be raided at any moment. With wine and beer less readily available, liquor-based cocktails took their place, even becoming the centerpiece of the new cocktail party.\nThe Museum of the American Cocktail was founded in October 2004 by Dale and Jill DeGroff, Robert Hess, Philip Greene, Ted Haigh, Anistatia Miller, Jared Brown, Chris McMillian, Laura McMillian, and a group of spirits experts, writers, and cocktail historians including David Wondrich, drink correspondent for Esquire; and Gaz Regan, among others. The Museum provides education in mixology through its exhibits, monthly seminars, publications, and events.</string>
    <string name="number_of_questions">number of questions</string>
    <string name="screenshots">screenshots</string>
    <string name="rules">rules</string>
    <string name="app_info">app info</string>
    <string name="about_app">Android is a mobile operating system based on a modified version of the Linux kernel and other open-source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device, the HTC Dream, being launched in September 2008.\nThe source code has been used to develop variants of Android on a range of other electronics, such as game consoles, digital cameras, portable media players, PCs, each with a specialized user interface. Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google. Software packages on Android, which use the APK format, are generally distributed through proprietary application stores like Google Play Store, Amazon Appstore (including for Windows 11), Samsung Galaxy Store, Huawei AppGallery, Cafe Bazaar, and GetJar, or open source platforms like Aptoide or F-Droid.\nAndroid has been the best-selling OS worldwide on smartphones since 2011 and on tablets since 2013. As of May 2021, it has over three billion monthly active users, the largest installed base of any operating system,[9] and as of January 2021, the Google Play Store features over 3 million apps.[10] Android 13, released on August 15, 2022, is the latest version.\nIn 2010, Google launched its Nexus series of devices, a lineup in which Google partnered with different device manufacturers to produce new devices and introduce new Android versions. The series was described as having played a pivotal role in Androids history by introducing new software iterations and hardware standards across the board, and became known for its bloat-free software with timely ... updates.[35] At its developer conference in May 2013, Google announced a special version of the Samsung Galaxy S4, where, instead of using Samsungs own Android customization, the phone ran stock Android and was promised to receive new system updates fast.[36] The device would become the start of the Google Play edition program, and was followed by other devices, including the HTC One Google Play edition,[37] and Moto G Google Play edition.[38] In 2015, Ars Technica wrote that Earlier this week, the last of the Google Play edition Android phones in Googles online storefront were listed as no longer available for sale and that Now theyre all gone, and it looks a whole lot like the program has wrapped up.\nOn Android 4.4 Kit Kat, shared writing access to MicroSD memory cards has been locked for user-installed applications, to which only the dedicated directories with respective package names, located inside Android/data/, remained writeable. Writing access has been reinstated with Android 5 Lollipop through the backwards-incompatible Google Storage Access Framework interface.\nOn August 22, 2019, it was announced that Android Q would officially be branded as Android 10, ending the historic practice of naming major versions after desserts. Google stated that these names were not inclusive to international users (due either to the aforementioned foods not being internationally known, or being difficult to pronounce in some languages).[74][75] On the same day, Android Police reported that Google had commissioned a statue of a giant number 10 to be installed in the lobby of the developers new office.[76] Android 10 was released on September 3, 2019, to Google Pixel phones first.</string>
    <string name="text_photo_gallery">hhhhhhhhh</string>
    <string name="photo_gallery_text">Photography is the art, application, and practice of creating durable images by recording light, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film. It is employed in many fields of science, manufacturing (e.g., photolithography), and business, as well as its more direct uses for art, film and video production, recreational purposes, hobby, and mass communication.\nLeonardo da Vinci mentions natural camerae obscurae that are formed by dark caves on the edge of a sunlit valley. A hole in the cave wall will act as a pinhole camera and project a laterally reversed, upside down image on a piece of paper. Renaissance painters used the camera obscura which, in fact, gives the optical rendering in color that dominates Western Art. It is a box with a small hole in one side, which allows specific light rays to enter, projecting an inverted image onto a viewing screen or paper.\nDaniele Barbaro described a diaphragm in 1566.[25] Wilhelm Homberg described how light darkened some chemicals (photochemical effect) in 1694.[26] The fiction book Giphantie, published in 1760, by French author Tiphaigne de la Roche, described what can be interpreted as photography.\nNiépce died in 1833 and Daguerre then redirected the experiments toward the light-sensitive silver halides, which Niépce had abandoned many years earlier because of his inability to make the images he captured with them light-fast and permanent. Daguerres efforts culminated in what would later be named the daguerreotype process. The essential elements—a silver-plated surface sensitized by iodine vapor, developed by mercury vapor, and fixed with hot saturated salt water—were in place in 1837. The required exposure time was measured in minutes instead of hours. Daguerre took the earliest confirmed photograph of a person in 1838 while capturing a view of a Paris street: unlike the other pedestrian and horse-drawn traffic on the busy boulevard, which appears deserted, one man having his boots polished stood sufficiently still throughout the several-minutes-long exposure to be visible. The existence of Daguerres process was publicly announced, without details, on 7 January 1839. The news created an international sensation. France soon agreed to pay Daguerre a pension in exchange for the right to present his invention to the world as the gift of France, which occurred when complete working instructions were unveiled on 19 August 1839. In that same year, American photographer Robert Cornelius is credited with taking the earliest surviving photographic self-portrait.\nOriginally, all photography was monochrome, or black-and-white. Even after color film was readily available, black-and-white photography continued to dominate for decades, due to its lower cost, chemical stability, and its classic photographic look. The tones and contrast between light and dark areas define black-and-white photography.[39] Monochromatic pictures are not necessarily composed of pure blacks, whites, and intermediate shades of gray but can involve shades of one particular hue depending on the process. The cyanotype process, for example, produces an image composed of blue tones. The albumen print process, publicly revealed in 1847, produces brownish tones.\nColor photography was explored beginning in the 1840s. Early experiments in color required extremely long exposures (hours or days for camera images) and could not fix the photograph to prevent the color from quickly fading when exposed to white light.</string>
</resources>