<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bkg_custom_grad_lin"
    android:layout_height="match_parent"
    tools:context=".SetttttingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_settings"
        android:fontFamily="@font/montserrat_black"
        android:layout_width="0dp"
        android:alpha="0.8"
        android:textColor="@color/add_colour_the_most_dark"
        android:padding="2dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="quiz settings"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintEnd_toStartOf="@id/btn_img_exit_settings_frag"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />

    <ImageView
        android:id="@+id/btn_img_exit_settings_frag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:src="@drawable/close_settings"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_lvl_diff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:alpha="0.8"
        android:fontFamily="@font/opensans_regular"
        android:text="level of difficulty"
        android:textAllCaps="true"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seekBar_lvl_diff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_num_quest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:alpha="0.8"
        android:text="@string/number_of_questions"
        android:textAllCaps="true"
        android:textColor="@color/add_colour_the_most_dark"
        android:textSize="20sp"
        android:fontFamily="@font/opensans_regular"
        app:layout_constraintBottom_toTopOf="@id/seek_bar_num_quest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_num_quest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progress="85"
        android:progressDrawable="@drawable/created_seek_bar"
        android:thumb="@drawable/thumb_on_settings_seek_bar"
        android:thumbTint="@color/add_colour_the_most_dark"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_20" />

    <ScrollView
        android:id="@+id/scroll_v_for_text_quiz_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar_lvl_diff"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_95"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_about_app_short_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:alpha="0.7"
            android:text="@string/text_on_settings"
            android:textColor="@color/add_colour_the_most_dark"
            android:textSize="14sp"
            android:textStyle="italic"
            />


    </ScrollView>


    <SeekBar
        android:id="@+id/seekBar_lvl_diff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progress="15"
        android:progressDrawable="@drawable/created_seek_bar"
        android:thumb="@drawable/thumb_on_settings_seek_bar"
        android:thumbTint="@color/add_colour_the_most_dark"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_30" />

    <TextView
        android:id="@+id/tv_dovn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        android:textAllCaps="true"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/dovn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_95" />




</androidx.constraintlayout.widget.ConstraintLayout>